css/style.css
/* ... */
#projectTwoWebsite{
  position: absolute;
  top: 95%;
  color: #0000EE;
  font-family: "TikTok Font Regular", serif;
  left: 60%;
  transform: translateX(-60%);
}



#projectBoxThree{
  font-family: "TikTok Font Bold", serif;
  color: white;
  text-align: center;
  font-size: 16px;
  position: relative;
  height: 48%;
  width: 45%;
  margin-top: 30px;

}
#projectBoxThreeHead{
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 290px;
  width: 100%;
}
#projectThreeVideo{
  width: 90%;
  height: 68%;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}
#projectBoxThreeDescription{
  position: absolute;
  font-size: 14px;
  font-family: "TikTok Font Regular", serif;
  text-align: center;
  width: 100%;
  height: 23%;
  left: 50%;
  transform: translateX(-50%);
  top: 80%;
}
#projectThreeGithub{
  position: absolute;
  top: 95%;
  color: #0000EE;
  font-family: "TikTok Font Regular", serif;
  text-decoration: transparent;
  text-decoration-thickness: 0;
  text-align: center;
  left: 50%;
  transform: translateX(-50%);
}
#projectThreeGithub:hover{
  cursor: not-allowed;
}

#projectBoxFour{
  font-family: "TikTok Font Bold", serif;
  color: white;
  text-align: center;
  font-size: 16px;
  position: relative;
  height: 48%;
  width: 45%;
  margin-left: auto; /* Push the box to the right */
  margin-top: 30px;
}
#projectBoxFourHead{
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 290px;
  width: 100%;
}
#projectFourVideo{
  width: 90%;
  height: 68%;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}
#projectBoxFourDescription{
  position: absolute;
  font-size: 14px;
  font-family: "TikTok Font Regular", serif;
  text-align: center;
  width: 100%;
  height: 23%;
  left: 50%;
  transform: translateX(-50%);
  top: 80%;
}
#projectFourGithub{
  position: absolute;
  top: 95%;
  color: #0000EE;
  font-family: "TikTok Font Regular", serif;
  left: 40%;
  transform: translateX(-40%);
}
#projectFourWebsite{
  position: absolute;
  top: 95%;
  color: #0000EE;
  font-family: "TikTok Font Regular", serif;
  left: 60%;
  transform: translateX(-60%);
}


#contactSection{
  outline: gold 2px dotted;
  position: relative;
  height: 1080px;
  width: 80%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;

}

#contactHeading{
  font-family: "TikTok Font Bold", serif;
  font-size: 64px;
  width: 100%;
  text-align: center;
  color: white; /* Primary color for the text */
  position: relative;
  padding-bottom: 50px;
  padding-top: 150px;
}
#contactContainer {
  align-items: center; /* Center children horizontally */
  justify-content: center; /* Center children vertically if you want */
  position: relative;
  height: 91%;
  width: 80%;
  padding-top: 100px;
  left: 50%;
  transform: translateX(-50%);
}

#contactCardOne {
  display: flex;
  flex-direction: row;
  justify-content: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
  width: 100%; /* Adjust this as necessary */
}

#githubContact, #githubContactUsername, #runningWritingClickMeOne {
  /* No need for 'position: relative' if we're not positioning them absolutely */
  display: flex; /* Make these flex containers as well */
  justify-content: center; /* Center the content inside */
  align-items: center; /* Useful if these had multiple lines of text or content */
}

#githubContact {
  width: 64px;
  height: auto;
}

#githubContactUsername {
  font-family: "TikTok Font Regular", serif;
  padding-left: 25px; /* Adjust or remove as necessary for centering */
  font-size: 32px;
  color: white;
}
#runningWritingClickMeOpenOne{
  width: fit-content;
  margin-left: 1%; /* Adjust or remove as necessary for centering */
  color: #a2a2a2;
  font-family: "Running Writing", serif;
  font-size: 26px;
  opacity: 0.5;
  letter-spacing: 2px;
  top: 10px;
  left: 31%;
  position: absolute;
}
#runningWritingClickMeCloseOne {
  width: fit-content;
  margin-left: 1%; /* Adjust or remove as necessary for centering */
  color: #a2a2a2;
  font-family: "Running Writing", serif;
  font-size: 26px;
  opacity: 0.5;
  letter-spacing: 2px;
  top: 325px;
  left: 69%;
  position: absolute;
}



#contactCardTwo {
  display: flex;
  flex-direction: row;
  justify-content: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
  margin-top: 50px;
  width: 100%; /* Adjust this as necessary */
}

#gmailContact, #gmailContactUsername, #runningWritingClickMeOne {
  /* No need for 'position: relative' if we're not positioning them absolutely */
  display: flex; /* Make these flex containers as well */
  justify-content: center; /* Center the content inside */
  align-items: center; /* Useful if these had multiple lines of text or content */
}

#gmailContact {
  width: 64px;
  height: auto;
}

#gmailContactUsername {
  font-family: "TikTok Font Regular", serif;
  padding-left: 25px; /* Adjust or remove as necessary for centering */
  font-size: 32px;
  color: white;
}



#contactCardThree {
  display: flex;
  flex-direction: row;
  justify-content: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
  margin-top: 50px;
  width: 100%; /* Adjust this as necessary */
}

#linkedInContact, #linkedInContactUsername, #runningWritingClickMeOne {
  /* No need for 'position: relative' if we're not positioning them absolutely */
  display: flex; /* Make these flex containers as well */
  justify-content: center; /* Center the content inside */
  align-items: center; /* Useful if these had multiple lines of text or content */
}

#linkedInContact {
  width: 64px;
  height: auto;
}

#linkedInContactUsername {
  font-family: "TikTok Font Regular", serif;
  padding-left: 25px; /* Adjust or remove as necessary for centering */
  font-size: 32px;
  color: white;
}
/* ... */

